# panzer_repo

./: CMakeLists.txt  Jenkinsfile  Makefile  README.md  cmake_install.cmake  jenkins_modeling_kw.sh  jenkins_rtm_kw.sh  jenkins_rtm_shaheen.sh
app/: CMakeLists.txt  gather.c  modeling.c  rtm.c  simwave_apps.cbp
app/backup/: modeling_simwave.c
cmake/modules/: cuda_arch_options.cmake  gnu_c.cmake  gnu_cxx.cmake  gnu_fortran.cmake  intel_c.cmake
cmake/post_install/: CMakeLists.txt  InstallSubdirs.cmake
include/stencil/: bwriter.h  config.h  gpu_wave.h  interp.h  macros.h  mlbs.h  parser.h  pml.h  shot.h  sismap.h  source.h  stencil.h  storage.h  velocity.h  wave.h  wave_tb.h  wtime.h
scripts/: compile.sh  j_compare_wavefields_for_SB_TB_icpc.sh  make_commit.sh  pull_repo.sh  rtm_salt3d_kw.sh
scripts/performance_tests/: j_compare_wavefields_for_SB_TB2.sh  j_compare_wavefields_for_SB_TB3.sh  j_compare_wavefields_for_SB_TB4.sh  j_compare_wavefields_for_SB_TB5.sh  j_compare_wavefields_for_SB_TB6.sh  j_compare_wavefields_for_SB_TB7.sh  sb_test_reproduce.sh  sb_test_reproduce2.sh  sb_test_reproduce3.sh  test1.sh  test1_v2.sh  test1kanary.sh  test1kanary2.sh  test2.sh  test3.sh
scripts/performance_tests/ibex/: modeling_setup.sh  test1_modeling.sh  test1_modeling2.sh  test1_modeling3_interactive.sh  test2.sh  test3.sh
scripts/performance_tests/sh3/: rtm_salt3d_sb.sh  rtm_salt3d_tb.sh  rtm_salt3d_tb_kw.sh  test1_modeling.sh  test1_modeling_kw.sh  test1_rtm.sh  test1_rtm_kw.sh  test2.sh  test2_2nd_run.sh  test3_2nd_run.sh
scripts/performance_tests/sh3/examples/: test2_turin.sh
scripts_useful/: Makefile  diff_to  diff_to.c  isnan  isnan.c  logs2graph_louis.ipynb  sismo.py  source.py  vizu.py
scripts_useful/heiner_igel/Notebooks4Coursera/W2/: W2_P2.ipynb
scripts_useful/heiner_igel/Notebooks4Coursera/W3/: W3_P1_Gaussian.ipynb  W3_P2_Gaussian_analytical.ipynb
scripts_useful/heiner_igel/Notebooks4Coursera/W4/: W4_fd_ac2d_homogeneous.ipynb
scripts_useful/heiner_igel/Notebooks4Coursera/W9/: W9_se_hetero_1d_solution.ipynb
scripts_useful/mfiles/: SANITY_CHECK.m  SANITY_CHECK_TB.m  check_source_injection_TB1st_and_TB2nd.m  compare_sismos.m  compare_sismos_salt_3d.m  extract_1d_solution.asv  extract_1d_solution.m  find_same_dt_for_TB1st_and_TB2nd.m  performance_plot2.m  plot_acquisition.m  plot_compare_codes_sb_tb.m  plot_compare_sismos.m  plot_compare_snapshots.m  plot_marmousi_2301x512x751.m  plot_rtm_image.m  plot_salt3d.asv  plot_salt3d169x169x50.m  plot_seismogram (Конфликтующая копия с компьютера MacBook-Air-Pavel.local 2023-06-01).m  plot_seismogram.m  plot_seismogram_from_txt.m  plot_share_1st_order.m  plot_sismos_augvel.m  plot_sismos_last.asv  plot_sismos_last.m  plot_sismos_last_apr.m  plot_sismos_salt.m  plot_sismos_simwave3.m  plot_snap.m  plot_snapshot_ABCs.m  plot_snapshot_Louis.asv  plot_snapshot_Louis.m  plot_snapshot_Louis_1.m  plot_snapshot_compare_SB_1st.m  plot_snapshot_compare_SB_2nd.m  plot_snapshot_investigate_bug.asv  plot_snapshot_last_version.m  plot_snapshot_no_ABCs.m  plot_snapshot_no_ABCs_2.m  plot_snapshot_rached.m  plot_snapshot_rached_cmp4.m  (+28 more)
scripts_useful/mfiles/tmp/: compare_soln.m  find_suitable_tgs_for_omp_num_threads.m  plot_compare_codes.m
scripts_useful/python/: SB_cache_blocking_heat_map_stencil_rtm.py  stencil_rtm_SB_cache_blocking_research.py  stencil_rtm_performance_research.ipynb  stencil_rtm_performance_rome_2026.ipynb  testing_script_modeling.py  testing_script_rtm.py
scripts_useful/shared_louis/: modeling-snap_end.c  modeling-snap_tb.c  modeling.c  script-compute__compare.sh
src/: CMakeLists.txt  Makefile  bwriter.c  cmake_install.cmake  gpu_wave.cu  interp.c  mlbs.c  parser.c  pml.c  shot.c  simwave.cbp  source.c  velocity.c  wave.c  wave_tb.c  wtime.c
src/backup/: mlbs.c  storage.cpp  storage_interface.c
vscode_server/: launch-code-server-24340604-slurm.err  launch-code-server-24340604-slurm.out  launch-code-server.srun  launch-code-server_15h_1gpu.sbatch  launch-code-server_15h_1gpu_glogin.sbatch  launch-code-server_2h_1gpu_glogin.sbatch  launch-code-server_ibex_cpu.sbatch  launch-code-server_ibex_cpu.slurm  launch-code-server_ibex_cpu.srun
