##
## @copyright Copyright 2017- Issam Said. All rights reserved.
## This file is part of \b stencil.
##
## \b stencil is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## stencil is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with \b stencil.  If not, see <http://www.gnu.org/licenses/>.
##
## @file cmake/post_install/CMakeLists.txt
## @author Issam SAID
## @brief CMake post-install build script for stencil.
##
#install(SCRIPT "${CMAKE_SOURCE_DIR}/cmake/post_install/InstallSubdirs.cmake")